# code-agent

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  PLAN.md  README.md  autofix_config.json  config.json  install.sh  memory.json
.autofix/autofix/sessions/: master-1776680956-671502.json  master-1776681108-672443.json  master-1776683505-676926.json
scripts/: build-docs.sh
skills/: context-management.md  kernel-backporting.md  plan-mode.md
src/: agent.rs  completion.rs  config.rs  main.rs  provider.rs  sessions.rs  tools.rs  ui.rs  workers.rs
