[package]
name = "coding-agent-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "autofix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "=4.5.20", features = ["derive", "env"] }
crossterm = "=0.27.0"
home = "=0.5.9"
ratatui = "=0.26.3"
reqwest = { version = "=0.11.27", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "=14.0.0"
tokio = { version = "=1.41.1", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
unicode-segmentation = "=1.12.0"
walkdir = "2"
